--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <div class="footer-band">
         <div class="banner-container">
               <div class="black-banner">
-                  <a href="https://www.SomosOrigen.com" class="banner-link" target="_blank">
+                  <a href="https://jesr2104.github.io/DigitalBusinessCard-Origen/" class="banner-link" target="_blank">
                       <img src="origen-link.png" alt="Logo centrado" class="center-image">
                   </a>
               </div>
